--- a/scss/layouts/_lo-hero.scss
+++ b/scss/layouts/_lo-hero.scss
@@ -263,4 +263,31 @@
             }
         }
     }
+    &--style-6 {
+        background: #EBEDFF;
+        padding: 205px 0 190px 0;
+        &::before {
+            content: url("../../images/hero-section/page-banner-shape.png");
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+        bottom: 0;
+            width: 100%;
+            z-index: -1;
+        }
+        .rt-hero-section-content-wrapper {
+            .section-text-content {
+                margin: 0;
+                .section-heading {
+                    font-family: $font-roboto;
+                    font-weight: 600;
+                    font-size: 40px;
+                    line-height: 47px;
+                    color: $color-title;
+                    border-bottom: none;
+                }
+            }
+        }
+    }
 }
