--- a/scss/components/_cp-blog-post-card.scss
+++ b/scss/components/_cp-blog-post-card.scss
@@ -1,43 +1,56 @@
 .blog-post-item {
     border-radius: 10px;
-    overflow: hidden;
     .blog-post-img {
         overflow: hidden;
-        border-radius: 10px 10px 0px 0px;
+        border-radius: 20px 20px 0px 0px;
+        position: relative;
         .blog-post-img-link {
             width: 100%;
             img {
+                filter: grayscale(100);
                 @include transition;
+                transform-origin: left center;
                 width: 100%;
             }
         }
+        .tag {
+            background: #15C590;
+            color: $color-white;
+            font-family: $font-roboto;
+            font-weight: 500;
+            font-size: 15px;
+            line-height: 18px;
+            text-align: center;
+            text-transform: capitalize;
+            padding: 10px 20px;
+            border-radius: 55px;
+            position: absolute;      
+            left: 30px;
+            top: 30px; 
+        }
     }
     .blog-post-content {
-        border-style: solid;
-        border-color: #E0E0E0;
-        border-width: 0px 1px 1px 1px;
-        padding: 22px 28px 30px;
-        border-radius: 0px 0px 10px 10px;
+        box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.05);
+        border-radius: 0px 0px 20px 20px;
+        padding: 28px 28px 40px;
         background: $color-white;
-        .tag {
-            margin-bottom: 13px;
-        }
+
         .blog-post-title {
             a {
-                font-family: $font-outfit;
-                font-weight: 600;
-                @include toRem(font-size, 22);
-                line-height: 30px;
+                font-family: $font-roboto;
+                font-weight: 500;
+                @include toRem(font-size, 30);
                 color: $color-title;
                 &:hover {
-                    color: $color-primary;
+                    color: $color-secondary;
                 }
             }
-            margin-bottom: 22px;
+            line-height: 45px;
         }
 
         .entry-meta {
-            gap: 15px;
+            gap: 32px;
+            margin-bottom: 9px;
             @include media-from-to(1200px, min, 1400px, max) {
                 gap: 20px;
             }
@@ -47,26 +60,97 @@
             li {
                 gap: 7px;
                 span {
-                    // line-height: 0;
-                    @include toRem(font-size, 14);
+                    @include toRem(font-size, 18);
+                    line-height: 22px;
                 }
                 a {
-                    // line-height: 0;
-                    @include toRem(font-size, 14);
+                    @include toRem(font-size, 18);
+                    line-height: 22px;
                     &:hover {
-                        color: $color-primary;
+                        color: $color-secondary;
                     }
                 }
             }
         }
+
+        .read-more-btn {
+            background: #F7F7F7;
+            border-radius: 500px;
+            font-family: $font-roboto;
+            font-weight: 500;
+            font-size: 15px;
+            line-height: 18px;
+            color: $color-title;
+            padding: 11px 19px;
+        }
     }
     &:hover {
         .blog-post-img {
-            border-radius: 10px 10px 0px 0px;
             .blog-post-img-link {
                 img {
-                    transform: scale(1.15);
+                    transform: scale(1.3);
+                    filter: grayscale(0);
+                    transform-origin: right center;
                 }
+            }
+            .tag {
+                background: $color-white;
+                color: $color-title;
+            }
+        }
+        .read-more-btn {
+            background: #15C590;
+            color: $color-white;
+        }
+    }
+
+    &--style-2 {
+        margin-bottom: 24px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+        .blog-post-img {
+            .blog-post-img-link {
+                img {
+                }
+            }
+            .tag {      
+                right: 30px;
+                left: unset;
+            }
+        }
+        .blog-post-content { 
+            .entry-meta { 
+                margin-bottom: 14px;
+            }
+            .blog-post-title {
+
+            }
+            .blog-post-info {
+                margin-bottom: 31px;
+            }
+
+        }
+
+    }
+}
+
+.blog-section {
+    .blogs-wrapper {
+        margin-bottom: 60px;
+    }
+    .see-more-btn-area {
+        .see-more-btn {
+            border: 1px solid #15C590;
+            border-radius: 42px;
+            padding: 11px 20px;
+            font-family: $font-roboto;
+            font-weight: 500;
+            font-size: 15px;
+            line-height: 18px;
+            color: #15C590;
+            svg {
+                margin-left: 6px;
             }
         }
     }
