--- a/scss/components/_cp-widget-categories.scss
+++ b/scss/components/_cp-widget-categories.scss
@@ -18,11 +18,11 @@
     .categories-list {
         ul {
             li {
+                list-style: disc;
                 position: relative;
                 &::after {
                     content: "";
                     width: 100%;
-                    border-bottom: 1px solid #E8E8E8;
                     position: absolute;
                     bottom: 0;
                     left: 0;
@@ -46,7 +46,7 @@
                     background-size: 200% 100%;
                     background-position: -100%;
                     display: inline-block;
-                    padding: 5px 0;
+                    // padding: 5px 0;
                     position: relative;
                     -webkit-background-clip: text;
                     -webkit-text-fill-color: transparent;
