--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -79,7 +79,7 @@
     --color-shade25: #8A58F3;
     --color-shade26: #FF557B;
     --color-shade27: #3B72FE;
-    --color-shade28: ;
+    --color-shade28: #FCFCFF ;
     --color-shade29: ;
     --color-shade30: ;
 
