--- a/scss/components/_cp-accordion.scss
+++ b/scss/components/_cp-accordion.scss
@@ -52,6 +52,7 @@
     }
     &--style-2 {
         .accordion-item {
+            margin-bottom: 20px;
             &:first-child {
                 border: 1px solid #DCDCDC;
             }
@@ -66,6 +67,7 @@
                     &::after {
                         background-image: url("../images/icons/plus.svg");
                         height: 10px;   
+                        background-size: unset;
                     }
                 }
                 .accordion-button:not(.collapsed) {
@@ -85,7 +87,12 @@
     }
     &--style-3 {
         .accordion-item {
+            position: relative;
+            margin-bottom: 20px;
             border: none;
+            box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.04);
+            border-radius: 10px;
+            
             &:first-child {
                 
             }
@@ -181,6 +188,69 @@
                         background: #FD5B5B;;
                     }
                 }
+            }
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+    }
+    &--style-4 { 
+        .accordion-item {
+            margin-bottom: 20px;
+            box-shadow: none;
+            border: none;
+            border-radius: 0;
+            background: #F8F8FF;
+            border-radius: 10px;
+            &:first-child {
+                border: none;
+            }
+            &:last-child {
+                border: none;
+            }
+            .accordion-header {
+                .accordion-button {
+                    font-family: $font-roboto;
+                    font-weight: 500;
+                    font-size: 18px;
+                    line-height: 21px;
+                    color: $color-title;
+
+                    border-radius: 10px;
+                    background: #F8F8FF;
+                    padding-left: 60px;
+                    &::after {
+                        background-image: url("../images/icons/boxed-plus.svg");
+                        position: absolute;
+                        left: 30px;
+                        background-size: unset;
+                    }
+                    &:focus {
+                        border: none;
+                        box-shadow: none;
+                    }
+                }
+                .accordion-button:not(.collapsed) {
+                    color: #4F4FF4;
+                    box-shadow: none;
+                    &::after {
+                        background-image: url("../images/icons/boxed-minus.svg");
+                        transform: rotate(0deg);
+                    }
+                    &:focus {
+                        border: none;
+                        box-shadow: none;
+                    }
+                }
+            }
+            .accordion-body {
+                padding: 0 30px 35px 30px;
+                font-family: $font-roboto;
+                font-weight: 400;
+                font-size: 15px;
+                line-height: 30px;
+                color: #6B707F;
+
             }
             &:last-child {
                 margin-bottom: 0;
