--- a/scss/components/_cp-section-text-content.scss
+++ b/scss/components/_cp-section-text-content.scss
@@ -14,6 +14,12 @@
     color: #1D2746;
     border-bottom: 1px solid #D9D9D9;
     padding-bottom: 30px;
+
+    &--style-2 {
+        border-bottom: none;
+        margin: 0;
+        padding-bottom: 20px;
+    }
 }
 .para-text {
     font-family: $font-roboto;
