Add contact page

--- a/scss/components/_cp-map.scss
+++ b/scss/components/_cp-map.scss
@@ -1,7 +1,7 @@
 .rt-map-section {
+    padding-top: 0;
     .map {
-        border: 1px solid #ECECEC;
-        border-radius: 10px;    
+        border-radius: 50px;    
         height: 596px;
         overflow: hidden;
         iframe {
