--- a/scss/components/_cp-contact-infobox.scss
+++ b/scss/components/_cp-contact-infobox.scss
@@ -1,58 +1,41 @@
 .contact-info-box {
-    gap: 10px;
+    gap: 14px;
+    margin-bottom: 25px;
     .icon {
         width: 50px;
         height: 50px;
-        border: 1px solid #D5D5D5;
         overflow: hidden;
         position: relative;
-        z-index: 0;
-        background: $color-white;
-        svg {
-            
-        }
-        // &::before {
-        //     content: "";
-        //     position: absolute;
-        //     left: 50%;
-        //     top: 0;
-        //     height: 100%;
-        //     width: 0%;
-        //     background: $color-primary;
-        //     border-radius: 23px;
-        //     transition: all 0.3s ease-in-out;
-        //     z-index: -1;
-        // }
+        background: #F3FDF9;
+        @include transition;
     }
     .contact-info-details {
+        flex: 1;
         .title {
-            @include toRem (font-size, 14);
-            font-family: $font-outfit;
-            font-weight: 400;
-            line-height: 18px;
-            text-transform: capitalize;
-            color: #9D9CAE;
-        }
-        .info {
-            font-family: $font-outfit;
+            @include toRem (font-size, 16);
+            font-family: $font-roboto;
             font-weight: 500;
-            @include toRem (font-size, 18px);
-            line-height: 23px;
-            text-transform: capitalize;
-            color: $color-secondary;
+            line-height: 21px;
+            color: $title-font;
+            margin-bottom: 6px;
+        }
+        .para-text {
+            font-family: $font-roboto;
+            font-weight: 400;
+            @include toRem (font-size, 16);
+            line-height: 26px;
+            color: #6B707F;
+            padding-right: 155px;
         }
     }
 
     &:hover {
         .icon {
-            // border-color: $color-primary;
-            // &::before {
-            //     width: 120%;
-            //     left: -10%;
-            // }
-            // svg {
-            //     fill: $color-white;
-            // }
+            background: $color-secondary;
+            svg {
+                fill: $color-white;
+                @include transition;
+            }
         }
     }
 }
